--- a/examples/index.html
+++ b/examples/index.html
@@ -1,15 +1,278 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>Examples Index</title>
+    <title>107 Coding Examples Hub</title>
+    <style>
+      li > h3 {
+        margin: 4px 0;
+      }
+      ul ul li {
+        display: flex;
+        max-width: 600px;
+      }
+      ul ul li h4 {
+        display: inline-block;
+        margin:0;
+        flex: 2;
+      }
+      ul ul li a {
+        flex: 1;
+      }
+    </style>
   </head>
   <body>
-    <h1>This is my Examples Index page.</h1>
+    <h1>107 Coding Examples Hub</h1>
 
+    <h2>Week 1</h2>
     <ul>
-      <li><a href="headings.html">Headings</a></li>
-      <li><a href="textstylingtags.html">Text Styling Tags</a></li>
-      <li><a href="images.html">Images</a></li>
+      <li>
+        <h3>Day 2</h3>
+        <ul>
+          <li>
+            <h4>Headings</h4>
+            <a href="Day02_headings.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week1/Day02_headings.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>Text Styling Tags</h4>
+            <a href="Day02_textstylingtags.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week1/Day02_textstylingtags.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>Images</h4>
+            <a href="Day02_images.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week1/Day02_images.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>Links (Anchors)</h4>
+            <a href="Day02_links.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week1/Day02_links.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <h3>Day 3</h3>
+        <ul>
+          <li>
+            <h4>Inline Styles</h4>
+            <a href="Day03_inlinestyles.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week1/Day03_inlinestyles.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>Internal CSS</h4>
+            <a href="Day03_internalcss.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week1/Day03_internalcss.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <h3>Day 4</h3>
+        <ul>
+          <li>
+            <h4>In-page Links (Anchors)</h4>
+            <a href="Day04_inpagelinks.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week1/Day04_inpagelinks.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>Simple Portfolio Demo</h4>
+            <a href="Day04_bonus_portfoliodemo1.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week1/Day04_bonus_portfoliodemo1.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+
+    <h2>Week 2</h2>
+    <ul>
+      <li>
+        <h3>Day 5</h3>
+        <ul>
+          <li>
+            <h4>Internal CSS Review</h4>
+            <a href="Day05_internal-css.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week2/Day05_internal-css.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>External CSS</h4>
+            <a href="Day05_external-css.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week2/Day05_external.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <h3>Day 6</h3>
+        <ul>
+          <li>
+            <h4>Lists</h4>
+            <a href="Day06_lists.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week2/Day06_lists.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>Navbar</h4>
+            <a href="Day06_navbar.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week2/Day06_navbar.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <h3>Day 7</h3>
+        <ul>
+          <li>
+            <h4>Flow (Inline vs Block)</h4>
+            <a href="Day07_flow.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week2/Day07_flow.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>Font Family - Part 1</h4>
+            <a href="Day07_font-family_part1.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week2/Day07_font-family_part1.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>Div to Semantic Layout</h4>
+            <a href="Day07_div-to-semantic-layout.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week2/Day07_div-to-semantic-layout.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <h3>Day 8</h3>
+        <ul>
+          <li>
+            <h4>Intermediate Portfolio Demo (Semantics and Flow)</h4>
+            <a href="Day07_semantic-layout.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week2/Day07_semantic-layout.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+
+    <h2>Week 3</h2>
+    <ul>
+      <li>
+        <h3>Day 9</h3>
+        <ul>
+          <li>
+            <h4>Quiz 3 Review (Padding/Margin, Box Shadow, Gradients)</h4>
+            <a href="Day09_quiz-3-review.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week3/Day09_quiz-3-review.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <h3>Day 10</h3>
+        <ul>
+          <li>
+            <h4>Float</h4>
+            <a href="Day10_float.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week3/Day10_float.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <h3>Day 11</h3>
+        <ul>
+          <li>
+            <h4>Tables</h4>
+            <a href="Day11_tables.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week3/Day11_tables.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <h3>Day 12</h3>
+        <ul>
+          <li>
+            <h4>Layouts (Table vs Float)</h4>
+            <a href="Day11_layouts_tableVsFloat.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week3/Day11_layouts_tableVsFloat.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>Position (Visual Narrative)</h4>
+            <a href="Day12_position.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week3/Day12_position.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+
+
+    <h2>Week 4</h2>
+    <ul>
+      <li>
+        <h3>Day 13</h3>
+        <ul>
+          <li>
+            <h4>Flex Demo 1 (Flex Items)</h4>
+            <a href="Day13_flex_demo_1.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week4/Day13_flex_demo_1.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>Flex Demo 2 (Flex Containers)</h4>
+            <a href="Day13_flex_demo_2.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week4/Day13_flex_demo_2.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>Flex Cheatsheet (Flex Items)</h4>
+            <a href="Day13_flex_items.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week4/Day13_flex_items.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>Flex Cheatsheet (Flex Containers)</h4>
+            <a href="Day13_flex_containers.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week4/Day13_flex_containers.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
     </ul>
   </body>
 </html>
