media queries and flexbox

--- a/examples/week1/Day02_images.html
+++ b/examples/week1/Day02_images.html
@@ -9,7 +9,7 @@
     <!-- local image src -->
     <img
       style="height: 200px"
-      src="../images/dog.jpeg"
+      src="../../images/dog.jpeg"
       alt="a cute puppy"
     />
 
