--- a/examples/week4/Day14_responsiveflexbox.html
+++ b/examples/week4/Day14_responsiveflexbox.html
@@ -34,7 +34,7 @@
       }
       nav .normalLink,
       nav .importantLink {
-        flex: 1;
+        flex-grow: 1;
         text-align: center;
       }
       main {
@@ -50,11 +50,10 @@
         text-align: center;
       }
       footer .importantLink {
-        flex: 2;
+        flex-grow: 2;
         text-align: center;
       }
 
-      /* This is the breakpoint for tablet */
       @media screen and (min-width: 480px) and (max-width: 799px) {
         header {
           font-size: 18px;
@@ -83,11 +82,9 @@
         }
       }
 
-      /* This is the breakpoint for mobile */
       @media screen and (max-width: 479px) {
         header {
           font-size: 14px;
-          padding: 4px 24px;
         }
         header,
         main {
@@ -111,7 +108,7 @@
   </head>
   <body>
     <header>
-      <h1>Response Flexbox Example</h1>
+      <h1>Responsive Flexbox Example</h1>
     </header>
     <nav>
       <div class="importantLink">Important Link 1</div>
@@ -122,16 +119,17 @@
     </nav>
     <main>
       <p>
-        Ad summis do dolore est tamen officia ne tamen culpa,
-        probant illum nulla pariatur quem qui litteris malis te
-        ullamco transferrem. Sunt eiusmod quo quae aute, nam enim
-        non tamen. Non quorum culpa eram officia ut mandaremus
-        noster appellat, multos se qui elit doctrina, id irure
-        occaecat.Incurreret philosophari a nescius de dolore admodum
-        praesentibus id dolor aliquip qui arbitrantur e dolor
-        cernantur ut officia. Litteris tamen minim a dolor, ut dolor
-        quem se appellat ut in summis praesentibus, quid eu non anim
-        occaecat. Nisi e incididunt.
+        Cupidatat ita aliqua mentitum, sint nostrud coniunctione,
+        commodo concursionibus est voluptate sed malis excepteur iis
+        coniunctione. Fore ingeniis cupidatat a ex ullamco ita
+        proident. Quae ea ubi irure probant quo an id quid offendit
+        o excepteur export ut quibusdam reprehenderit, quo aliqua
+        ullamco familiaritatem nam dolore constias ex mentitum, quid
+        quo ingeniis sed fore, constias quis malis in elit, malis ne
+        arbitror.Ut mentitum exercitation. Enim eiusmod nam
+        praesentibus, te cernantur in incurreret, noster ita
+        incurreret in doctrina eram mandaremus. Tamen eruditionem
+        senserit velit iudicem in laboris si duis fabulas.
       </p>
     </main>
     <footer>
