--- a/examples/week4/Day14_mediaqueries.html
+++ b/examples/week4/Day14_mediaqueries.html
@@ -3,7 +3,7 @@
   <head>
     <title>Media Queries Example</title>
     <style>
-      #header {
+      header {
         background-color: skyblue;
         padding: 12px 48px;
       }
@@ -12,7 +12,7 @@
       #largeScreen {
         padding: 48px;
       }
-      #footer {
+      footer {
         background-color: lavender;
         padding: 12px 48px;
       }
@@ -22,7 +22,7 @@
         greater than 800px
       */
       @media screen and (min-width: 800px) {
-        #header {
+        header {
           font-size: 36px;
         }
         #largeScreen {
@@ -42,7 +42,7 @@
         (or in other words, between 480px and 799px)
       */
       @media screen and (min-width: 480px) and (max-width: 799px) {
-        #header {
+        header {
           font-size: 24px;
         }
         #mediumScreen {
@@ -61,7 +61,7 @@
         less than 479px
       */
       @media screen and (max-width: 479px) {
-        #header {
+        header {
           font-size: 16px;
         }
         #smallScreen {
@@ -73,16 +73,16 @@
           background-color: grey;
           color: grey;
         }
-        #footer {
+        footer {
           display: none;
         }
       }
     </style>
   </head>
   <body>
-    <div id="header">
+    <header>
       <h1>HEADER</h1>
-    </div>
+    </header>
     <div id="largeScreen">
       <h2>This is greater than 800px</h2>
     </div>
@@ -92,8 +92,8 @@
     <div id="smallScreen">
       <h2>This is less than 480px</h2>
     </div>
-    <div id="footer">
+    <footer>
       <h2>I disappear when the screen gets too small</h2>
-    </div>
+    </footer>
   </body>
 </html>
