--- a/examples/index.html
+++ b/examples/index.html
@@ -273,6 +273,44 @@
           </li>
         </ul>
       </li>
+      <li>
+        <h3>Day 14</h3>
+        <ul>
+          <li>
+            <h4>Media Queries</h4>
+            <a href="week4/Day14_mediaqueries.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week4/Day14_mediaqueries.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>Responsive Flexbox</h4>
+            <a href="week4/Day14_responsiveflexbox.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week4/Day14_responsiveflexbox_verbose.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <h3>Day 15</h3>
+        <ul>
+          <li>
+            <h4>Grid Layout (Areas)</h4>
+            <a href="week4/Day15_grid_areaLayout.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week4/Day15_grid_areaLayout.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>Grid Layout (Lines)</h4>
+            <a href="week4/Day15_grid_lineLayout.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week4/Day15_grid_lineLayout.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
     </ul>
   </body>
 </html>
