--- a/examples/week4/Day15_grid_lineLayout.html
+++ b/examples/week4/Day15_grid_lineLayout.html
@@ -5,22 +5,22 @@
     <style>
       .myGrid {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: 1fr 1fr 1fr;
         grid-auto-rows: minmax(50px, auto);
       }
-      .header {
+      header {
         background-color: lightgreen;
         padding: 36px;
         grid-column: 1 / 4;
         grid-row: 1;
       }
-      .nav {
+      nav {
         background-color: #DDFFDD;
         padding: 36px;
         grid-column: 1;
         grid-row: 2;
       }
-      .content {
+      main {
         padding: 36px;
         grid-column: 2 / 4;
         grid-row: 2;
@@ -29,24 +29,33 @@
   </head>
   <body>
     <div class="myGrid">
-      <div class="header">
+      <header>
         <h1>This is how page layouts can be done with grids (and lines)</h1>
-      </div>
-      <div class="nav">
-        Nav goes here
-      </div>
-      <div class="content">
-        <div>
-          Cillum instituendarum commodo aute laboris, veniam ingeniis
-          familiaritatem. Sint non proident e deserunt consectetur hic
-          vidisse. Ea duis senserit deserunt.Cernantur anim
-          expetendis, consequat quem ullamco, occaecat ea multos
-          eiusmod eu veniam laboris o iudicem. Deserunt tempor dolore
-          laboris illum, ab nostrud te singulis. Ingeniis export ita
-          doctrina voluptatibus hic officia o irure, eu nostrud
-          consectetur, nam iis enim dolor minim.
-        </div>
-      </div>
+      </header>
+      <nav>NAVIGATION GOES HERE</nav>
+      <main>
+        <p>
+          Minim distinguantur laborum elit constias, est aliqua
+          quamquam. Possumus summis mandaremus laborum, non non
+          exquisitaque. Laboris ita dolore cernantur quo de malis
+          pariatur reprehenderit, iis minim mandaremus quo incurreret
+          anim aute eu culpa. Litteris noster fabulas cernantur.Non
+          expetendis a nostrud, te a dolor admodum. E velit te sint,
+          mandaremus eram o expetendis instituendarum. Nulla an si
+          aliqua expetendis.
+        </p>
+        <p>
+          In do anim fugiat esse, quis ingeniis instituendarum, multos
+          probant excepteur, appellat est nulla excepteur. Export
+          distinguantur laborum ipsum senserit ad tamen pariatur
+          ullamco non se labore legam et officia a quorum constias ea
+          nescius. Offendit amet sed doctrina coniunctione.Ingeniis
+          magna eiusmod. Ea quem pariatur firmissimum, o amet possumus
+          consectetur, an iudicem domesticarum, minim quamquam e
+          cernantur. Possumus minim illum occaecat tempor, si
+          cupidatat quo constias.
+        </p>
+      </main>
     </div>
   </body>
 </html>
