--- a/examples/week5/Day17_audio.html
+++ b/examples/week5/Day17_audio.html
@@ -7,19 +7,19 @@
     <h1>&lt;audio&gt; Tag Example</h1>
 
     <h2>Here is an audio example with a <code>src</code> in the opening tag</h2>
-    <audio controls src="../audio/TranquilDepths.mp3">
+    <audio controls src="../../audio/TranquilDepths.mp3">
       Your browser does not support the &lt;audio&gt; element.
     </audio>
 
     <h2>Here is an audio example with multiple &lt;source&gt; children</h2>
     <audio controls>
-      <source src="../audio/TranquilDepths.mp3" type="audio/mpeg">
-      <source src="../audio/TranquilDepths.ogg" type="audio/ogg">
+      <source src="../../audio/TranquilDepths.mp3" type="audio/mpeg">
+      <source src="../../audio/TranquilDepths.ogg" type="audio/ogg">
       Your browser does not support the &lt;audio&gt; element.
     </audio>
 
     <h2>Here is an audio example that loops</h2>
-    <audio controls loop src="../audio/TranquilDepths.mp3">
+    <audio controls loop src="../../audio/TranquilDepths.mp3">
       Your browser does not support the &lt;audio&gt; element.
     </audio>
 
@@ -28,7 +28,7 @@
       (Don't do this! It is very bad practice to play sounds without the user's
       action or consent.)
     </h3>
-    <audio controls autoplay src="../audio/TranquilDepths.mp3">
+    <audio controls autoplay src="../../audio/TranquilDepths.mp3">
       Your browser does not support the &lt;audio&gt; element.
     </audio>
 
@@ -39,7 +39,7 @@
     </h2>
     <p>The audio tag is below, but without controls, there's nothing to see.</p>
     <br>
-    <audio src="../audio/TranquilDepths.mp3">
+    <audio src="../../audio/TranquilDepths.mp3">
       Your browser does not support the &lt;audio&gt; element.
     </audio>
   </body>
