--- a/examples/week5/Day17_video.html
+++ b/examples/week5/Day17_video.html
@@ -12,19 +12,19 @@
     <h1>&lt;video&gt; Tag Example</h1>
 
     <h2>Here is an video example with a <code>src</code> in the opening tag</h2>
-    <video controls src="../video/BigBuckBunny.ogg">
+    <video controls src="../../video/BigBuckBunny.ogg">
       Sorry, your browser doesn't support the &lt;video&gt; tag
     </video>
 
     <h2>Here is an video example with multiple &lt;source&gt; children</h2>
     <video controls>
-      <source src="../video/BigBuckBunny.ogg" type="video/ogg">
-      <source src="../video/BigBuckBunny.mp4" type="video/mp4">
+      <source src="../../video/BigBuckBunny.ogg" type="video/ogg">
+      <source src="../../video/BigBuckBunny.mp4" type="video/mp4">
       Sorry, your browser doesn't support the &lt;video&gt; tag
     </video>
 
     <h2>Here is an video example that loops</h2>
-    <video controls loop src="../video/BigBuckBunny.ogg">
+    <video controls loop src="../../video/BigBuckBunny.ogg">
       Sorry, your browser doesn't support the &lt;video&gt; tag
     </video>
 
@@ -33,15 +33,15 @@
       (Don't enable autoplay without muting audio! It is very bad practice to
       play sounds without the user's action or consent.)
     </h3>
-    <video controls autoplay muted src="../video/BigBuckBunny.ogg">
+    <video controls autoplay muted src="../../video/BigBuckBunny.ogg">
       Sorry, your browser doesn't support the &lt;video&gt; tag
     </video>
 
     <h2>Here is an video example with a "poster" image before playback</h2>
     <video
       controls
-      src="../video/BigBuckBunny.ogg"
-      poster="../images/bbb-splash.png"
+      src="../../video/BigBuckBunny.ogg"
+      poster="../../images/bbb-splash.png"
     >
       Sorry, your browser doesn't support the &lt;video&gt; tag
     </video>
@@ -50,8 +50,8 @@
     <video
       class="smallVideo"
       controls
-      src="../video/BigBuckBunny.ogg"
-      poster="../images/bbb-splash.png"
+      src="../../video/BigBuckBunny.ogg"
+      poster="../../images/bbb-splash.png"
     >
       Sorry, your browser doesn't support the &lt;video&gt; tag
     </video>
@@ -60,7 +60,7 @@
       If you don't set the <code>controls</code> attribute, the &lt;video&gt;
       tag will load, but you can't control it without Javascript.
     </h2>
-    <video src="../video/BigBuckBunny.ogg">
+    <video src="../../video/BigBuckBunny.ogg">
       Sorry, your browser doesn't support the &lt;video&gt; tag
     </video>
 
