--- a/index.html
+++ b/index.html
@@ -139,6 +139,15 @@
       </div>
 
       <div class="portfolio">
+        <a href="https://leilani1218.github.io/Leilani1218.github.io-" target="_blank">
+          Leilani's Portfolio
+        </a>
+        <a href="https://github.com/leilani1218/Leilani1218.github.io-" target="_blank">
+          Leilani's Repository
+        </a>
+      </div>
+
+      <div class="portfolio">
         <a href="https://pjmosley.github.io/" target="_blank">
           Precious' Portfolio
         </a>
