--- a/examples/index.html
+++ b/examples/index.html
@@ -312,5 +312,42 @@
         </ul>
       </li>
     </ul>
+
+    <h2>Week 5</h2>
+    <ul>
+      <li>
+        <h3>Day 17</h3>
+        <ul>
+          <li>
+            <h4>Audio</h4>
+            <a href="week5/Day17_audio.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week5/Day17_audio.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>Video</h4>
+            <a href="week5/Day17_video.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week5/Day17_video.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>Background Images</h4>
+            <a href="week5/Day17_backgroundImage.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week5/Day17_backgroundImage.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>Hero Header</h4>
+            <a href="week5/Day17_hero.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week5/Day17_hero.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
+    </ul>
   </body>
 </html>
