--- a/examples/index.html
+++ b/examples/index.html
@@ -348,6 +348,37 @@
           </li>
         </ul>
       </li>
+      <li>
+        <h3>Day 18</h3>
+        <ul>
+          <li>
+            <h4>CSS Transitions</h4>
+            <a href="week5/Day18_transitions.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week5/Day18_transitions.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>CSS Animations</h4>
+            <a href="week5/Day18_animations.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week5/Day18_animations.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <h3>Day 19</h3>
+        <ul>
+          <li>
+            <h4>Responsive Grid Areas</h4>
+            <a href="week5/Day19_grid_area_responsive.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week5/Day19_grid_area_responsive.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
     </ul>
   </body>
 </html>
