--- a/agenda.html
+++ b/agenda.html
@@ -22,11 +22,11 @@
     </style>
   </head>
   <body>
-    <h1>Agenda for Day 20 (6/1)</h1>
+    <h1>Agenda for Day 21 (6/6)</h1>
     <div id="agenda">
       <h2>Announcements (6:05)</h2>
       <h3>(if you're not here by 6:10, you're tardy!)</h3>
-      <h2>Period 1 (6:10-6:50): Flexbox / Grid Review</h2>
+      <h2>Period 1 (6:10-6:50): Grid Review</h2>
       <h2>Period 2 (7:00-7:50): Introduction to Forms</h2>
       <h2>Period 3 (8:10-9:50): GRRM Continued</h2>
       <h2>Period 4 (10:10-11): Lab Time</h2>
@@ -34,8 +34,9 @@
 
     <h1>Coming Soon</h1>
     <div id="agenda">
-      <h2>GRRM Redesign Project Due Friday</h2>
-      <h2>Final Project (Portfolio) Due Thursday, June 23rd
+      <h2>Forms Quiz on Thursday</h2>
+      <h2>GRRM Redesign Project Due This Friday (for IDL)</h2>
+      <h2>Final Project (Portfolio) Due Thursday, June 23rd</h2>
     </div>
 
     <h1>Course Breakdown</h1>
