--- a/examples/index.html
+++ b/examples/index.html
@@ -380,5 +380,33 @@
         </ul>
       </li>
     </ul>
+
+    <h2>Week 6</h2>
+    <ul>
+      <li>
+        <h3>Day 21</h3>
+        <ul>
+          <li>
+            <h4>Forms (Basic Styling)</h4>
+            <a href="week6/Day21_forms_basics.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week6/Day21_forms_basics.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <h3>Day 22</h3>
+        <ul>
+          <li>
+            <h4>Forms (Advanced Styling)</h4>
+            <a href="week6/Day22_forms_styling.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week6/Day22_forms_styling.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
+    </ul>
   </body>
 </html>
