--- a/examples/index.html
+++ b/examples/index.html
@@ -407,6 +407,25 @@
           </li>
         </ul>
       </li>
+      <li>
+        <h3>Day 23</h3>
+        <ul>
+          <li>
+            <h4>Javascript - Variables</h4>
+            <a href="week6/Day23_js_variables.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week6/Day23_js_variables.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>Javascript - Functions</h4>
+            <a href="week6/Day23_js_functions.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week6/Day23_js_functions.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
     </ul>
   </body>
 </html>
