--- a/agenda.html
+++ b/agenda.html
@@ -26,7 +26,7 @@
     <div id="agenda">
       <h2>Announcements (6:05)</h2>
       <h3>(if you're not here by 6:10, you're tardy!)</h3>
-      <h2>Period 1 (6:10-6:50): GRRM Blogposts</h2>
+      <h2>Period 1 (6:10-6:50): GRRM Search Bar & Blogposts</h2>
       <h2>Period 2 (7:00-7:50): Forms Kahoot & Quiz</h2>
       <h2>Period 3 (8:10-9:00): Challenge Kahoots</h2>
       <h2>Period 3.5 (9:00-9:50): Javascript Bouncing Ball</h2>
