--- a/examples/index.html
+++ b/examples/index.html
@@ -426,6 +426,18 @@
           </li>
         </ul>
       </li>
+      <li>
+        <h3>Day 24</h3>
+        <ul>
+          <li>
+            <h4>Javascript - Bouncing Ball</h4>
+            <a href="week6/Day23_js_bouncingball.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week6/Day23_js_bouncingball.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
     </ul>
   </body>
 </html>
