--- a/examples/index.html
+++ b/examples/index.html
@@ -439,5 +439,21 @@
         </ul>
       </li>
     </ul>
+
+    <h2>Week 7</h2>
+    <ul>
+      <li>
+        <h3>Day 25</h3>
+        <ul>
+          <li>
+            <h4>Javascript - Countdown</h4>
+            <a href="week7/Day25_countdown.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week7/Day25_countdown.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
+    </ul>
   </body>
 </html>
