slideshow, arrays, and loops

--- a/examples/index.html
+++ b/examples/index.html
@@ -454,6 +454,25 @@
           </li>
         </ul>
       </li>
+      <li>
+        <h3>Day 26</h3>
+        <ul>
+          <li>
+            <h4>Javascript - Arrays (Lists) and Loops</h4>
+            <a href="week7/Day26_javascript_arrays_loops.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week7/Day26_javascript_arrays_loops.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>Javascript - Simple Slideshow</h4>
+            <a href="week7/Day26_javascript_slideshow.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week7/Day26_javascript_slideshow.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
     </ul>
   </body>
 </html>
