--- a/examples/index.html
+++ b/examples/index.html
@@ -473,6 +473,25 @@
           </li>
         </ul>
       </li>
+      <li>
+        <h3>Day 27</h3>
+        <ul>
+          <li>
+            <h4>jQuery - Dropdown Menu</h4>
+            <a href="week7/Day27_jquery_dropdownmenu.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week7/Day27_jquery_dropdownmenu.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>jQuery - Popup</h4>
+            <a href="week7/Day27_jquery_popup.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week7/Day27_jquery_popup.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
     </ul>
   </body>
 </html>
