--- a/examples/week7/Day27_jquery_popup.html
+++ b/examples/week7/Day27_jquery_popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>jQuery - Dropdown Menu</title>
+    <title>jQuery - Popup</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <style>
       * {
