--- a/examples/index.html
+++ b/examples/index.html
@@ -492,6 +492,18 @@
           </li>
         </ul>
       </li>
+      <li>
+        <h3>Day 28</h3>
+        <ul>
+          <li>
+            <h4>Bootstrap - Basics (Hero, Breadcrumbs, Grid)</h4>
+            <a href="week7/Day28_bootstrap_basics.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week7/Day28_bootstrap_basics.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
     </ul>
   </body>
 </html>
