hamburger and php

--- a/examples/index.html
+++ b/examples/index.html
@@ -505,5 +505,28 @@
         </ul>
       </li>
     </ul>
+
+    <h2>Week 7</h2>
+    <ul>
+      <li>
+        <h3>Day 29</h3>
+        <ul>
+          <li>
+            <h4>Bootstrap - Hamburger Menu</h4>
+            <a href="week8/Day29_bootstrap_hamburger.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week8/Day29_bootstrap_hamburger.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>PHP Snippet (will not run)</h4>
+            <a href="week8/Day29_php_intro.html"></a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week8/Day29_php_intro.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
+    </ul>
   </body>
 </html>
