--- a/examples/week8/Day29_bootstrap_hamburger.html
+++ b/examples/week8/Day29_bootstrap_hamburger.html
@@ -15,9 +15,14 @@
         background-color: skyblue;
         border: 1px solid gray;
       }
+
+      img {
+        width: 100%;
+      }
     </style>
   </head>
   <body>
+
     <div class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Symphori</a>
@@ -49,37 +54,35 @@
 
     <div class="container-fluid text-center bg-dark text-white mb-5">
       <div class="col p-5">
-        <h1>Hello, world!</h1>
-        <p>Isn't this nifty?<p>
+        <h1>Hello World!</h1>
+        <p>Isn't this nifty?</p>
       </div>
     </div>
+
+    <nav>
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="#">Home</a></li>
+        <li class="breadcrumb-item"><a href="#">Gallery</a></li>
+        <li class="breadcrumb-item active">Photography</li>
+      </ol>
+    </nav>
 
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <h3>Sidenav</h3>
-          <div>Link 1</div>
-          <div>Link 2</div>
-          <div>Link 3</div>
+          <img src="../../images/cat.png" alt="cat">
         </div>
         <div class="col-sm-6">
-          <h2>Column 2</h2>
-          <p>
-            Do laborum adipisicing non qui malis fabulas reprehenderit
-            ubi laborum sint velit offendit aute hic senserit
-            transferrem in laboris. Sed esse graviterque, commodo
-            transferrem ubi doctrina. Nescius nam tempor, eram fabulas a
-            litteris, officia in illum, aut ut quid possumus o ut in
-            despicationes iis an ex fidelissimae, mentitum exquisitaque
-            in ingeniis se ex sunt occaecat quibusdam. Aute litteris
-            senserit.Ab si esse ingeniis, dolor iudicem quo expetendis,
-            ab se fore ingeniis qui si nisi doctrina. Deserunt ab
-            ingeniis ad in iis dolor illum minim. Vidisse multos malis
-            se duis, ea pariatur ad cernantur, ut duis te aute, quem
-            mandaremus ingeniis.
-          </p>
+          Si non cillum dolor dolor, magna exercitation voluptate elit
+          laborum, do iis tempor litteris ubi sunt in vidisse. Eu est
+          summis quae illum. Qui cupidatat comprehenderit eu amet ubi
+          probant. Probant de aliqua, quo iudicem arbitrantur.Velit
+          non do enim incurreret. Malis eiusmod despicationes, ut
+          noster enim te quamquam. Ubi tempor reprehenderit, fabulas
+          tempor expetendis, incurreret ne officia eu arbitror noster
+          aliqua se quem. Se nisi sempiternum, iudicem hic incididunt.
         </div>
-        <div class="col-sm">Column 3</div>
+        <div class="col">Column 3</div>
       </div>
       <div class="row">
         <div class="col-sm">Small Column</div>
