js review changes

--- a/examples/js_review.html
+++ b/examples/js_review.html
@@ -31,13 +31,16 @@
         if (hasRedClass) {
           $(this).addClass("blueText");
           $(this).removeClass("redText");
-        } else if (hasGreenClass) {
+        }
+        else if (hasGreenClass) {
           $(this).addClass("redText");
           $(this).removeClass("greenText");
-        } else if (hasBlueClass) {
+        }
+        else if (hasBlueClass) {
           $(this).addClass("greenText");
           $(this).removeClass("blueText");
-        } else {
+        }
+        else {
           $(this).addClass("blueText");
         }
 
