--- a/examples/index.html
+++ b/examples/index.html
@@ -527,6 +527,18 @@
           </li>
         </ul>
       </li>
+      <li>
+        <h3>Day 31</h3>
+        <ul>
+          <li>
+            <h4>Javascript - Review</h4>
+            <a href="week8/Day31_js_review.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week8/Day31_js_review.html">
+              Code
+            </a>
+          </li>
+        </ul>
+      </li>
     </ul>
   </body>
 </html>
