--- a/assignments/108/mamp_wordpress_setup.html
+++ b/assignments/108/mamp_wordpress_setup.html
@@ -36,10 +36,10 @@
       <li>
         Start up MAMP.
       </li>
-      <li>Click the Start Servers button. If successful, the button will change to green and say Stop Servers.
+      <li>Click the Start Servers button. If successful, the button will change to green and say Stop Servers.<br>
         <img src="../../images/assignments/108/MAMP/10.png">
       </li>
-      <li>Click the Open WebStart Page button. This will open up the start up page for MAMP.
+      <li>Click the Open WebStart Page button. This will open up the start up page for MAMP.<br>
         <img src="../../images/assignments/108/MAMP/11.png">
       </li>
     </ol>
