--- a/assignments/108/mamp_wordpress_setup.html
+++ b/assignments/108/mamp_wordpress_setup.html
@@ -73,7 +73,7 @@
       <li>Navigate to wordpress on your localhost.
         <ul>
           <li>On Windows, this should be found at: localhost/wordpress</li>
-          <li>On Mac, this should be found at: localhost:80/wordpress or localhost:8000/wordpress</li>
+          <li>On Mac, this should be found at: localhost:8888/wordpress</li>
         </ul>
       </li>
       <li>You should then see the following pages as you configure the install:<br>
