--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -30,14 +30,14 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 108 Agenda for Day 5 (7/5)</h1>
+    <h1>GDWD 108 Agenda for Day 6 (7/6)</h1>
     <div id="agenda">
       <h2>Announcements (6:05)</h2>
       <h3>(if you're not here by 6:07, you're tardy!)</h3>
-      <h2>Period 1 (6:10-6:50): Lab Time</h2>
-      <h2>Period 2 (7:00-7:50): AHR Logo Critiques</h2>
-      <h2>Period 3 (8:10-9:50): AHR Logo Critiques</h2>
-      <h2>Period 4 (10:10-11): AHR Logo Critiques</h2>
+      <h2>Period 1 (6:10-6:50): AHR Logo Critiques</h2>
+      <h2>Period 2 (7:00-7:50): AHR Logo Critiques | Wordpress Media</h2>
+      <h2>Period 3 (8:10-9:50): Wordpress Media cont. | Wordpress Columns, Groups, Reusable Blocks</h2>
+      <h2>Period 4 (10:10-11): Lab Time</h2>
     </div>
 
     <h1>Critique Guidelines</h1>
@@ -49,9 +49,7 @@
 
     <h1>Coming Soon</h1>
     <div id="agenda">
-      <h2 class="warning">Assignment 4 (Copywriting in the Real World) - Due Last Week</h2>
-      <h2 class="warning">AHR Project Part 1 (Branding and Copy) - Due Last Week</h2>
-      <h2>AHR Logo Critique Today (and possibly tomorrow)</h2>
+      <h2>Assignment 5 - Will be assigned after the demo, due tomorrow</h2>
     </div>
 
 
