--- a/examples/107/index.html
+++ b/examples/107/index.html
@@ -447,8 +447,8 @@
         <ul>
           <li>
             <h4>Javascript - Countdown</h4>
-            <a href="week7/Day25_countdown.html">Preview</a>
-            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week7/Day25_countdown.html">
+            <a href="week7/Day25_javascript_countdown.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/week7/Day25_javascript_countdown.html">
               Code
             </a>
           </li>
