--- a/examples/107/index.html
+++ b/examples/107/index.html
@@ -430,9 +430,16 @@
         <h3>Day 24</h3>
         <ul>
           <li>
-            <h4>Javascript - Bouncing Ball</h4>
-            <a href="week6/Day23_js_bouncingball.html">Preview</a>
-            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/107/week6/Day23_js_bouncingball.html">
+            <h4>Javascript - Bouncing Ball (Fullscreen)</h4>
+            <a href="week6/Day24_js_bouncingball.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/107/week6/Day24_js_bouncingball.html">
+              Code
+            </a>
+          </li>
+          <li>
+            <h4>Javascript - Bouncing Ball (Boxed)</h4>
+            <a href="week7/Day26_javascript_bouncingball.html">Preview</a>
+            <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/107/week7/Day26_javascript_bouncingball.html">
               Code
             </a>
           </li>
